fixes bug in desktop layout woord wrapping

--- a/sass/tweet.scss
+++ b/sass/tweet.scss
@@ -41,7 +41,7 @@
   }
 
   section {
-    word-wrap: break-word;
+    word-break: break-all;
     font-weight: 600;
     padding: 1.5em 1em 1.5em 1em;
     border-bottom: thick solid base.$text-dark;
